# CHANGELOG
# ---
# * Return the authrorization number of the original transaction in the SkipJack gateway [cody]
#
# * Update format of line items given to the gateway. Cleanup and uncomment unit tests [cody]
#
# * Add support for the SkipJack gateway [b...@atomicobject.com, cody]
#
# * Make the bogus gateway easier to test by moving messages into constants [cody]
#
# * Add retry logic when connection has been refused for all gateways. Enable safe retries of all connection failures with the PayflowGateway, as it has a unique request header. [cody]
#
# * Catch Timeout::Error when posting data [cody]
#
# * Change order of loading ActionPack for tests since assert_success defined in ActionController::Assertions::DeprecatedAssertions inteferes with ActiveMerchant's definition [cody]
#
# * Catch Errno::ETIMEDOUT and extend open and read timeouts to 60 seconds [cody]
#
# * Add address2 to the billing address of Viaklix transactions [cody]
#
# * Improve Psigate generic error message [cody]
#
# * Fix small errors in Psigate documentation [cody]
#
# * Add Response#fraud_review? query method to the response. Allows gateways to indicate that a payment is pending review by the fraud service [cody]
#
# * Handle Errno::ECONNRESET when posting data [cody]
#
# * Fix broken USA ePay URL [cody]
#
# * Update RequiresParameters to support HashWithIndifferentAccess [cody]
#
# * Add support for SecurePayTech payment gateway [Jasper Bryant-Greene]
#
# * Detect when test credentials are being used with PayJunction [cody]
#
# * Update documentation about TrustCommerce void [cody]
#
# * Add void to TrustCommerce [jesse.c.scott]
#
# * Add support for echecks to the BrainTree gateway [Jeremy Voorhis]
#
# * Fix before_validate and validate methods in CreditCard [rick.denatale]
#
# * Add support for Netbilling payment gateway [cody]
#
# * Pass in N/A for unknown states when a country is present in PaypalGateway [cody]
#