@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Use existing credit_card helper in credit card tests [cody]
+#
 # * Return the authrorization number of the original transaction in the SkipJack gateway [cody]
 #
 # * Update format of line items given to the gateway. Cleanup and uncomment unit tests [cody]
